# GPT-OSS

./: README.md  __init__.py  load.py  main.py  official_implementation.py  pyproject.toml  setup.py
dtypes/: CMakeLists.txt  __init__.py  bfloat16.cpp  bfloat16.hpp  linear.cpp  linear_torch.cpp
test/: test.py
